--- a/resources/public/stylesheets/mmm.css
+++ b/resources/public/stylesheets/mmm.css
@@ -337,7 +337,7 @@ div.inner-form {
   margin-left: 20px;
 }
 
-span.add-movie, span.duplicate {
+span.add, span.duplicate {
   padding-left: 5px;
   font-size: small;
   font-style: italic;
