--- a/resources/public/stylesheets/mmm.css
+++ b/resources/public/stylesheets/mmm.css
@@ -28,7 +28,10 @@ p {
 
 a {
   color: inherit;
-/*  text-decoration: none; */
+  font-weight: bold;
+  border-bottom-width: 1px;
+  border-bottom-style: dashed;
+  text-decoration: none;
 }
 
 a:hover {
@@ -235,9 +238,9 @@ th p, td p {
 
 
 th p a span, td p a span {
-  font-weight: bold;
+  /*font-weight: bold;
   border-bottom-width: 1px;
-  border-bottom-style: dashed;
+  border-bottom-style: dashed;*/
 }
 
 tr:nth-child(even) a {
