--- a/resources/public/stylesheets/mmm.css
+++ b/resources/public/stylesheets/mmm.css
@@ -85,7 +85,7 @@ nav li a.active {
 div.meta {
   background-color: Tan;
   margin-top: -40px;
-  height: 800px;
+  min-height: 800px;
   border-radius: 20px;
   border-color: Black;
 }
