--- a/resources/public/stylesheets/mmm.css
+++ b/resources/public/stylesheets/mmm.css
@@ -44,7 +44,7 @@ nav a, h2 a, nav a:hover, h2 a:hover, a.poster {
 }
 
 a:hover {
-  color: Yellow;
+  color: #79ABED;
 }
 
 label {
@@ -129,7 +129,9 @@ div.meta.main .twitter-timeline {
   display: block;
 }
 
-
+div.meta a:hover {
+  color: Yellow;
+}
 
 h2.list-label {
 
@@ -260,14 +262,13 @@ tr a {
   border-color: Black;
 }
 
-th a:hover, td a:hover {
-  color: Yellow;
-  border-color: Yellow;
-}
-
 tr:nth-child(even) {
   background-color: #79ABED;
   color: Black;
+}
+
+tr:nth-child(even) a:hover {
+  color: Yellow;
 }
 
 
