--- a/resources/public/stylesheets/mmm.css
+++ b/resources/public/stylesheets/mmm.css
@@ -25,6 +25,17 @@ main {
 
 header {
   float: left;
+  width: 100%;
+}
+
+ul.social-media li {
+  list-style: none;
+  float: left;
+}
+
+
+ul.social-media li a {
+  border: none;
 }
 
 p {
@@ -67,9 +78,13 @@ h1, h2, h3, h4, h5 {
 h1 {
   font-family: Otago;
   font-size: 3em;
+  float: left;
   /* text-shadow: 5px 5px 5px Black;*/
 }
 
+ul.social-media {
+  float: right;
+}
 
 
 nav {
